<resources>

    <string name="google_map_api_key">AIzaSyCeR8wLbc-RS-D_fDfpyTdU8SPMTMMga2A</string>

    <string name="app_name">CarPoolingAppV1</string>
    <string name="logout">Logout</string>

    <string name="loginTxt">Login</string>
    <string name="emailTxt">email/username</string>
    <string name="passwordTxt">password</string>
    <string name="sign_up_txt_btn">New user ? Sign Up</string>
    <string name="login_txt_btn">You already have an account? Login</string>
    <string name="signup_txt">Sign Up</string>
    <string name="homeHello">HNA NDIRO LHOME TE3NA w LKHEDMAT LOKHRIN</string>
    <string name="logoutTxtBtn">Logout</string>
    <string name="remember">remember my login information</string>

    <string name="title_activity_navigation">navigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="birth_date">Date of birth: --/--/----</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>

    <string name="emailSH">com.example.carpoolingappv1.email</string>
    <string name="passwordSH">com.example.carpoolingappv1.password</string>
    <string name="checkBoxSH">com.example.carpoolingappv1.checkbox</string>
    <string name="next">NEXT</string>

    <string-array name="wilayas">
        <item>Adrar</item>
        <item>Annaba</item>
        <item>Alger</item>
        <item>Setif</item>
        <item>Constantine</item>
        <item>Khenchla</item>
        <item>Ouargla</item>
    </string-array>

    <string-array name="carModels">
        <item>Audi</item>
        <item>Ford</item>
    </string-array>

    <string-array name="hours">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
