<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


    <LinearLayout
        android:id="@+id/linearLForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"

        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:id="@+id/linearLNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            tools:targetApi="o">
            <EditText
                android:id="@+id/firstNameSignupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                tools:ignore="Autofill"
                android:layout_marginHorizontal="20dp"
                />

            <EditText
                android:id="@+id/lastNameSignupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                tools:ignore="Autofill"
                android:layout_marginHorizontal="20dp"
                />


        </LinearLayout>


        <EditText
            android:id="@+id/emailSignupId"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/emailTxt"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/birthdateSignupId"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/birth_date"
            android:textAlignment="center"
            android:textSize="12sp"
            tools:ignore="Autofill"

            />

        <EditText
            android:id="@+id/phoneSignupId"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/addressSignupId"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/address"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/passwordSignupId"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwordTxt"
            android:inputType="textPassword"
            tools:ignore="Autofill"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLButtonsS"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/NextBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next" />
        <Button
            android:id="@+id/SignUpBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_txt"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/LogInTxtBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_btn"
            />

    </LinearLayout>

</RelativeLayout>