<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:layout_gravity="center">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailLoginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableLeft="@drawable/ic_mai_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/emailTxt"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/passwordLoginId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/passwordTxt"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="5dp"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/LoginBtnId"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/button_bg"
        android:textColor="#CCFFFFFF"
        android:text="@string/loginTxt" />

    <TextView
        android:id="@+id/SignUpTxtBtnId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/sign_up_txt_btn"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <CheckBox
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:id="@+id/remember_email_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/remember"
        app:layout_constraintTop_toBottomOf="@+id/SignUpTxtBtnId" />

</LinearLayout>