<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupConductorActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/fullNameSignupCId"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="full name"
                android:inputType="textPersonName"
                tools:ignore="Autofill"
                android:layout_marginHorizontal="11dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:id="@+id/emailSignupCId"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/birthdateSignupCId"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/birth_date"
            android:textAlignment="center"
            android:textSize="18dp"
            tools:ignore="Autofill"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:id="@+id/phoneSignupCId"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone"
                android:inputType="phone"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wilaya"/>
            <Spinner
                android:layout_weight="2"
                android:id="@+id/wilayaSignupCId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:ignore="Autofill" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/passwordSignupCId"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="@string/passwordTxt"
                android:inputType="textPassword"
                tools:ignore="Autofill"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:id="@+id/passwordSignupCId2"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="retype password"
                android:inputType="textPassword"
                tools:ignore="Autofill"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:id="@+id/carModelSignupId"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:hint="Car Model Name"
                android:inputType="text"
                tools:ignore="Autofill"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="car Unique Number"/>


            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.3"
                >

                <EditText
                    android:inputType="number"
                    android:id="@+id/carKey1SignupId"
                    android:layout_weight="0.8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>



                <EditText
                    android:inputType="number"
                    android:id="@+id/carKey2SignupId"
                    android:layout_weight="0.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    />

                <EditText
                    android:inputType="number"
                    android:id="@+id/carKey3SignupId"
                    android:layout_weight="0.2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>



            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/SignUpCBtnId"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/signup_txt"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"


            android:textColor="#CCFFFFFF"
            android:background="@drawable/button_bg"
            />
        <TextView
            android:id="@+id/LogInCTxtBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt_btn"
            />

    </LinearLayout>





</RelativeLayout>